# instnt-aries-vcx

./: Cargo.toml  Package.swift  create_datetime_file.sh  datetime.txt
.github/: dependabot.yml
.github/workflows/: afc_updates.yml  run-ios-script.yml  run-script.yml
.swiftpm/xcode/package.xcworkspace/xcuserdata/abhishekdarak.xcuserdatad/: UserInterfaceState.xcuserstate
aries/agents/MyUniffiAndroid/: local.properties  settings.gradle.kts
aries/agents/MyUniffiAndroid/app/: build.gradle.kts
aries/agents/MyUniffiAndroid/app/src/androidTest/java/com/example/myuniffiandroid/: ExampleInstrumentedTest.kt
aries/agents/MyUniffiAndroid/app/src/main/: AndroidManifest.xml
aries/agents/MyUniffiAndroid/app/src/main/java/com/example/myuniffiandroid/: MainActivity.kt
aries/agents/MyUniffiAndroid/app/src/main/java/com/example/myuniffiandroid/ui/theme/: Color.kt  Theme.kt  Type.kt
aries/agents/MyUniffiAndroid/app/src/main/res/values/: strings.xml  themes.xml
aries/agents/MyUniffiAndroid/app/src/test/java/com/example/myuniffiandroid/: ExampleUnitTest.kt
aries/agents/MyUniffiAndroid/gradle/wrapper/: gradle-wrapper.properties
aries/agents/aath-backchannel/: Dockerfile.aries-vcx
aries/agents/android/: local.properties
aries/agents/android/app/src/main/java/org/hyperledger/ariesvcx/: AppDemoController.kt
aries/agents/ios/ariesvcx/ariesvcx/: vcx.swift
aries/agents/ios/ariesvcx/ariesvcx/Source/: vcx.swift  vcxFFI.h
aries/agents/mobile_demo/app/src/main/java/org/hyperledger/ariesvcx/: AppDemoController.kt  HomeScreen.kt  MainActivity.kt
aries/agents/sample_framework_agent/src/: main.rs
aries/aries_vcx/src/utils/: encryption_envelope.rs
aries/aries_vcx_anoncreds/: Cargo.toml
aries/wrappers/uniffi-aries-vcx/: README.md
aries/wrappers/uniffi-aries-vcx/core/: Cargo.toml
aries/wrappers/uniffi-aries-vcx/core/src/: lib.rs  vcx.udl
aries/wrappers/uniffi-aries-vcx/core/src/core/: anoncreds.rs
aries/wrappers/uniffi-aries-vcx/core/src/handlers/: event_callback.rs  mod.rs
aries/wrappers/uniffi-aries-vcx/scripts/: android.build.cargo.ndk.framework.sh  android.build.cargo.ndk.sh  ios.build.cargo.sh
aries_framework_vcx/: Cargo.toml  Package.swift  build.rs  uniffi.toml
aries_framework_vcx/ios/: aries_framework_vcx.swift
aries_framework_vcx/ios/Source/: aries_framework_vcxFFI.h  aries_framework_vcxFFI.modulemap
aries_framework_vcx/src/: aries_framework_vcx.udl  lib.rs
aries_framework_vcx/src/scripts/: andriod.cargo.ndk.build.uniffi.sh  android.cargo.ndk.framework.all.architecture.sh  android.cargo.ndk.framework.sh  android.cargo.ndk.generate.binding.sh  android.cargo.ndk.reverse.sh  android.cargo.ndk.setup.sh  android.cargo.udl.sh  ios.build.cargo.sh
aries_framework_vcx_new/: Cargo.toml  build.rs
aries_framework_vcx_new/src/: aries_framework_vcx_new.udl  lib.rs  lib_old.rs
aries_framework_vcx_new/src/error/: convertors.rs  mod.rs
aries_framework_vcx_new/src/script/: android.cargo.ndk.framework.sh  ios.build.cargo.sh
