[package]
name = "aries_framework_vcx_new"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[lib]
name = "aries_framework_vcx_new"
crate-type = ["cdylib"]

[dependencies]
uniffi = { version = "0.28.3", features = ["cli"] }
aries_vcx = { path = "../aries/aries_vcx", features = [
  "anoncreds",
  "askar_wallet",
] }
async-trait = "0.1.81"
did_resolver_registry = { path = "../did_core/did_resolver_registry" }
did_peer = { path = "../did_core/did_methods/did_peer" }
env_logger = "0.11.3"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
url = "2.5.2"
serde = "1.0.97"
serde_json = "1.0.40"
uuid = { version = "1.10.0", features = [
  "v4",       # Lets you generate random UUIDs
  "fast-rng", # Use a faster (but still sufficiently random) RNG
] }
thiserror = "2.0.11"

[build-dependencies]
uniffi = { version = "0.28.3", features = [ "build" ] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"
