[package]
name = "aries_vcx_anoncreds"
version.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
edition.workspace = true

[features]
credx = ["dep:indy-credx"]
anoncreds = ["dep:anoncreds"]
legacy_proof = []
zmq_vendored = ["zmq-vendored"]  # Feature for zmq with vendored option
zmq_default = ["zmq-default"]    # Feature for zmq without vendored option

[dependencies]
indy-credx = { git = "https://github.com/hyperledger/indy-shared-rs", tag = "v1.1.0", optional = true }
anoncreds = { git = "https://github.com/hyperledger/anoncreds-rs.git", tag = "v0.2.0", optional = true }
aries_vcx_wallet = { path = "../aries_vcx_wallet" }
anoncreds_types = { path = "../misc/anoncreds_types" }
did_parser_nom = { path = "../../did_core/did_parser_nom" }
async-trait = "0.1.68"
thiserror = "1.0.40"
log = "0.4.17"
uuid = { version = "1.3.0", default-features = false, features = ["v4"] }
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
time = "0.3.20"
bitvec = "1.0.1"
openssl = { version = "0.10", features = ["vendored"] }
zmq-vendored = { package = "zmq", version = "0.9", features = ["vendored"], optional = true }
zmq-default = { package = "zmq", version = "0.9.0", optional = true }
